[gd_scene load_steps=16 format=4 uid="uid://bfdg3wgfoid62"]

[ext_resource type="Script" path="res://Script/patient.gd" id="1_52hqq"]
[ext_resource type="Texture2D" uid="uid://chi3lpcf84hv" path="res://Asset/Room_Builder_Walls_16x16.png" id="2_bvsfa"]
[ext_resource type="Texture2D" uid="uid://dyrtb20f8qyim" path="res://Asset/Room_Builder_borders_16x16.png" id="3_72vy2"]
[ext_resource type="PackedScene" uid="uid://b4cdtxhi8ajim" path="res://Scene/text.tscn" id="5_45n48"]
[ext_resource type="Script" path="res://Script/text_container.gd" id="5_i1mjr"]
[ext_resource type="Texture2D" uid="uid://dr7inlq5o75xj" path="res://Asset/green_button.png" id="7_48p7g"]
[ext_resource type="FontFile" uid="uid://cxsua0oj0kp4j" path="res://12X12.ttf" id="7_hjaa2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u7chy"]
texture = ExtResource("2_bvsfa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
27:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
27:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
27:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
16:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
27:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
27:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
16:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
27:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
5:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
27:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
5:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
16:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
27:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
16:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
27:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
5:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
16:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
27:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
5:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
16:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
27:23/0 = 0
29:23/0 = 0
30:23/0 = 0
31:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0
25:24/0 = 0
26:24/0 = 0
27:24/0 = 0
28:24/0 = 0
29:24/0 = 0
30:24/0 = 0
31:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
5:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
16:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
25:25/0 = 0
27:25/0 = 0
29:25/0 = 0
30:25/0 = 0
31:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0
25:26/0 = 0
26:26/0 = 0
27:26/0 = 0
28:26/0 = 0
29:26/0 = 0
30:26/0 = 0
31:26/0 = 0
0:27/0 = 0
1:27/0 = 0
2:27/0 = 0
3:27/0 = 0
5:27/0 = 0
7:27/0 = 0
8:27/0 = 0
9:27/0 = 0
11:27/0 = 0
12:27/0 = 0
13:27/0 = 0
14:27/0 = 0
16:27/0 = 0
18:27/0 = 0
19:27/0 = 0
20:27/0 = 0
22:27/0 = 0
23:27/0 = 0
24:27/0 = 0
25:27/0 = 0
27:27/0 = 0
29:27/0 = 0
30:27/0 = 0
31:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
5:28/0 = 0
6:28/0 = 0
7:28/0 = 0
8:28/0 = 0
9:28/0 = 0
11:28/0 = 0
12:28/0 = 0
13:28/0 = 0
14:28/0 = 0
15:28/0 = 0
16:28/0 = 0
17:28/0 = 0
18:28/0 = 0
19:28/0 = 0
20:28/0 = 0
22:28/0 = 0
23:28/0 = 0
24:28/0 = 0
25:28/0 = 0
26:28/0 = 0
27:28/0 = 0
28:28/0 = 0
29:28/0 = 0
30:28/0 = 0
31:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
5:29/0 = 0
7:29/0 = 0
8:29/0 = 0
9:29/0 = 0
11:29/0 = 0
12:29/0 = 0
13:29/0 = 0
14:29/0 = 0
16:29/0 = 0
18:29/0 = 0
19:29/0 = 0
20:29/0 = 0
22:29/0 = 0
23:29/0 = 0
24:29/0 = 0
25:29/0 = 0
27:29/0 = 0
29:29/0 = 0
30:29/0 = 0
31:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
5:30/0 = 0
6:30/0 = 0
7:30/0 = 0
8:30/0 = 0
9:30/0 = 0
11:30/0 = 0
12:30/0 = 0
13:30/0 = 0
14:30/0 = 0
15:30/0 = 0
16:30/0 = 0
17:30/0 = 0
18:30/0 = 0
19:30/0 = 0
20:30/0 = 0
22:30/0 = 0
23:30/0 = 0
24:30/0 = 0
25:30/0 = 0
26:30/0 = 0
27:30/0 = 0
28:30/0 = 0
29:30/0 = 0
30:30/0 = 0
31:30/0 = 0
0:31/0 = 0
1:31/0 = 0
2:31/0 = 0
3:31/0 = 0
5:31/0 = 0
7:31/0 = 0
8:31/0 = 0
9:31/0 = 0
11:31/0 = 0
12:31/0 = 0
13:31/0 = 0
14:31/0 = 0
16:31/0 = 0
18:31/0 = 0
19:31/0 = 0
20:31/0 = 0
22:31/0 = 0
23:31/0 = 0
24:31/0 = 0
25:31/0 = 0
27:31/0 = 0
29:31/0 = 0
30:31/0 = 0
31:31/0 = 0
0:32/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
4:32/0 = 0
5:32/0 = 0
6:32/0 = 0
7:32/0 = 0
8:32/0 = 0
9:32/0 = 0
11:32/0 = 0
12:32/0 = 0
13:32/0 = 0
14:32/0 = 0
15:32/0 = 0
16:32/0 = 0
17:32/0 = 0
18:32/0 = 0
19:32/0 = 0
20:32/0 = 0
22:32/0 = 0
23:32/0 = 0
24:32/0 = 0
25:32/0 = 0
26:32/0 = 0
27:32/0 = 0
28:32/0 = 0
29:32/0 = 0
30:32/0 = 0
31:32/0 = 0
0:33/0 = 0
1:33/0 = 0
2:33/0 = 0
3:33/0 = 0
5:33/0 = 0
7:33/0 = 0
8:33/0 = 0
9:33/0 = 0
11:33/0 = 0
12:33/0 = 0
13:33/0 = 0
14:33/0 = 0
16:33/0 = 0
18:33/0 = 0
19:33/0 = 0
20:33/0 = 0
22:33/0 = 0
23:33/0 = 0
24:33/0 = 0
25:33/0 = 0
27:33/0 = 0
29:33/0 = 0
30:33/0 = 0
31:33/0 = 0
0:34/0 = 0
1:34/0 = 0
2:34/0 = 0
3:34/0 = 0
4:34/0 = 0
5:34/0 = 0
6:34/0 = 0
7:34/0 = 0
8:34/0 = 0
9:34/0 = 0
11:34/0 = 0
12:34/0 = 0
13:34/0 = 0
14:34/0 = 0
15:34/0 = 0
16:34/0 = 0
17:34/0 = 0
18:34/0 = 0
19:34/0 = 0
20:34/0 = 0
0:35/0 = 0
1:35/0 = 0
2:35/0 = 0
3:35/0 = 0
5:35/0 = 0
7:35/0 = 0
8:35/0 = 0
9:35/0 = 0
11:35/0 = 0
12:35/0 = 0
13:35/0 = 0
14:35/0 = 0
16:35/0 = 0
18:35/0 = 0
19:35/0 = 0
20:35/0 = 0
11:36/0 = 0
12:36/0 = 0
13:36/0 = 0
14:36/0 = 0
15:36/0 = 0
16:36/0 = 0
17:36/0 = 0
18:36/0 = 0
19:36/0 = 0
20:36/0 = 0
11:37/0 = 0
12:37/0 = 0
13:37/0 = 0
14:37/0 = 0
16:37/0 = 0
18:37/0 = 0
19:37/0 = 0
20:37/0 = 0

[sub_resource type="TileSet" id="TileSet_t3nif"]
sources/0 = SubResource("TileSetAtlasSource_u7chy")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_udyqd"]
texture = ExtResource("3_72vy2")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
18:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
24:0/0 = 0
25:0/0 = 0
29:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
35:0/0 = 0
36:0/0 = 0
40:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
32:1/0 = 0
33:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
43:1/0 = 0
44:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
39:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
40:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
44:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
29:5/0 = 0
30:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
38:5/0 = 0
40:5/0 = 0
41:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
20:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
20:7/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
20:8/0 = 0
5:0/0 = 0
7:2/0 = 0
0:3/0 = 0
11:4/0 = 0
4:4/0 = 0
4:0/0 = 0
6:0/0 = 0
5:2/0 = 0
5:4/0 = 0
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_qatdj"]
sources/0 = SubResource("TileSetAtlasSource_udyqd")

[sub_resource type="SpriteFrames" id="SpriteFrames_vc1cl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5regu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b0guc"]
texture = ExtResource("7_48p7g")

[sub_resource type="Theme" id="Theme_26iyp"]
Button/styles/disabled = SubResource("StyleBoxTexture_b0guc")
Button/styles/focus = SubResource("StyleBoxTexture_b0guc")
Button/styles/hover = SubResource("StyleBoxTexture_b0guc")
Button/styles/normal = SubResource("StyleBoxTexture_b0guc")
Button/styles/pressed = SubResource("StyleBoxTexture_b0guc")

[node name="Patient" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 176.0
offset_bottom = 216.0
script = ExtResource("1_52hqq")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAMACIAAAABAAAAAAAMACIAAAACAAAAAAAMACIAAAADAAAAAAAMACIAAAAEAAAAAAAMACIAAAAFAAAAAAAMACIAAAAGAAAAAAAMACIAAAAHAAAAAAAMACIAAAAIAAAAAAAMACIAAAAJAAAAAAAMACIAAAAKAAAAAAAMACIAAAAAAAEAAAAQACIAAAAAAAIAAAAQACIAAAABAAIAAAAQACIAAAAAAAMAAAAQACIAAAAAAAQAAAAQACIAAAAAAAUAAAAQACIAAAAAAAYAAAAQACIAAAAAAAcAAAAQACIAAAAAAAgAAAAQACIAAAAAAAkAAAAQACIAAAAAAAoAAAAQACIAAAAAAAsAAAAQACIAAAAAAAwAAAAQACIAAAAAAA0AAAAQACIAAAAAAA4AAAAQACIAAAAAAA8AAAAQACIAAAABAAEAAAAQACIAAAABAAMAAAAQACIAAAABAAQAAAAQACIAAAABAAUAAAAQACIAAAABAAYAAAAQACIAAAABAAcAAAAQACIAAAABAAgAAAAQACIAAAABAAkAAAAQACIAAAABAAoAAAAQACIAAAABAAsAAAAQACIAAAABAAwAAAAQACIAAAABAA0AAAAQACIAAAABAA4AAAAQACIAAAABAA8AAAAQACIAAAACAAEAAAAQACIAAAACAAIAAAAQACIAAAACAAMAAAAQACIAAAACAAQAAAAQACIAAAACAAUAAAAQACIAAAACAAYAAAAQACIAAAACAAcAAAAQACIAAAACAAgAAAAQACIAAAACAAkAAAAQACIAAAACAAoAAAAQACIAAAACAAsAAAAQACIAAAACAAwAAAAQACIAAAACAA0AAAAQACIAAAACAA4AAAAQACIAAAACAA8AAAAQACIAAAADAAEAAAAQACIAAAADAAIAAAAQACIAAAADAAMAAAAQACIAAAADAAQAAAAQACIAAAADAAUAAAAQACIAAAADAAYAAAAQACIAAAADAAcAAAAQACIAAAADAAgAAAAQACIAAAADAAkAAAAQACIAAAADAAoAAAAQACIAAAADAAsAAAAQACIAAAADAAwAAAAQACIAAAADAA0AAAAQACIAAAADAA4AAAAQACIAAAADAA8AAAAQACIAAAAEAAEAAAAQACIAAAAEAAIAAAAQACIAAAAEAAMAAAAQACIAAAAEAAQAAAAQACIAAAAEAAUAAAAQACIAAAAEAAYAAAAQACIAAAAEAAcAAAAQACIAAAAEAAgAAAAQACIAAAAEAAkAAAAQACIAAAAEAAoAAAAQACIAAAAEAAsAAAAQACIAAAAEAAwAAAAQACIAAAAEAA0AAAAQACIAAAAEAA4AAAAQACIAAAAEAA8AAAAQACIAAAAFAAEAAAAQACIAAAAFAAIAAAAQACIAAAAFAAMAAAAQACIAAAAFAAQAAAAQACIAAAAFAAUAAAAQACIAAAAFAAYAAAAQACIAAAAFAAcAAAAQACIAAAAFAAgAAAAQACIAAAAFAAkAAAAQACIAAAAFAAoAAAAQACIAAAAFAAsAAAAQACIAAAAFAAwAAAAQACIAAAAFAA0AAAAQACIAAAAFAA4AAAAQACIAAAAFAA8AAAAQACIAAAAGAAEAAAAQACIAAAAGAAIAAAAQACIAAAAGAAMAAAAQACIAAAAGAAQAAAAQACIAAAAGAAUAAAAQACIAAAAGAAYAAAAQACIAAAAGAAcAAAAQACIAAAAGAAgAAAAQACIAAAAGAAkAAAAQACIAAAAGAAoAAAAQACIAAAAGAAsAAAAQACIAAAAGAAwAAAAQACIAAAAGAA0AAAAQACIAAAAGAA4AAAAQACIAAAAGAA8AAAAQACIAAAAHAAEAAAAQACIAAAAHAAIAAAAQACIAAAAHAAMAAAAQACIAAAAHAAQAAAAQACIAAAAHAAUAAAAQACIAAAAHAAYAAAAQACIAAAAHAAcAAAAQACIAAAAHAAgAAAAQACIAAAAHAAkAAAAQACIAAAAHAAoAAAAQACIAAAAHAAsAAAAQACIAAAAHAAwAAAAQACIAAAAHAA0AAAAQACIAAAAHAA4AAAAQACIAAAAHAA8AAAAQACIAAAAIAAEAAAAQACIAAAAIAAIAAAAQACIAAAAIAAMAAAAQACIAAAAIAAQAAAAQACIAAAAIAAUAAAAQACIAAAAIAAYAAAAQACIAAAAIAAcAAAAQACIAAAAIAAgAAAAQACIAAAAIAAkAAAAQACIAAAAIAAoAAAAQACIAAAAIAAsAAAAQACIAAAAIAAwAAAAQACIAAAAIAA0AAAAQACIAAAAIAA4AAAAQACIAAAAIAA8AAAAQACIAAAAJAAEAAAAQACIAAAAJAAIAAAAQACIAAAAJAAMAAAAQACIAAAAJAAQAAAAQACIAAAAJAAUAAAAQACIAAAAJAAYAAAAQACIAAAAJAAcAAAAQACIAAAAJAAgAAAAQACIAAAAJAAkAAAAQACIAAAAJAAoAAAAQACIAAAAJAAsAAAAQACIAAAAJAAwAAAAQACIAAAAJAA0AAAAQACIAAAAJAA4AAAAQACIAAAAJAA8AAAAQACIAAAAKAAEAAAAQACIAAAAKAAIAAAAQACIAAAAKAAMAAAAQACIAAAAKAAQAAAAQACIAAAAKAAUAAAAQACIAAAAKAAYAAAAQACIAAAAKAAcAAAAQACIAAAAKAAgAAAAQACIAAAAKAAkAAAAQACIAAAAKAAoAAAAQACIAAAAKAAsAAAAQACIAAAAKAAwAAAAQACIAAAAKAA0AAAAQACIAAAAKAA4AAAAQACIAAAAKAA8AAAAQACIAAAA=")
tile_set = SubResource("TileSet_t3nif")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAAKAAAAAAAAAAMAAAAKAAEAAAAEAAQAAAAKAAIAAAAEAAQAAAAKAAMAAAAEAAQAAAAKAAQAAAAEAAQAAAAKAAUAAAAEAAQAAAAKAAYAAAAEAAQAAAAKAAcAAAAEAAQAAAAKAAgAAAAEAAQAAAAKAAkAAAAEAAQAAAAKAAoAAAAEAAQAAAAKAAsAAAAEAAQAAAAKAAwAAAAEAAQAAAAKAA0AAAAEAAQAAAAKAA4AAAAEAAQAAAAKAA8AAAAEAAQAAAAAAAIAAAABAAMAAAAAAAMAAAABAAMAAAAAAAQAAAABAAMAAAAAAAUAAAABAAMAAAAAAAYAAAABAAMAAAAAAAcAAAABAAMAAAAAAAgAAAABAAMAAAAAAAkAAAABAAMAAAAAAAoAAAABAAMAAAAAAAsAAAABAAMAAAAAAAwAAAABAAMAAAAAAA8AAAABAAMAAAAAAA0AAAABAAMAAAAAAA4AAAABAAMAAAABAAAAAAAHAAIAAAACAAAAAAAHAAIAAAADAAAAAAAHAAIAAAAEAAAAAAAHAAIAAAAFAAAAAAAHAAIAAAAGAAAAAAAHAAIAAAAHAAAAAAAHAAIAAAAIAAAAAAAHAAIAAAAJAAAAAAAHAAIAAAAKABAAAAAEAAQAAAAKABEAAAAEAAQAAAAKABIAAAAEAAQAAAAKABMAAAAEAAQAAAAKABQAAAAEAAQAAAAKABUAAAAEAAQAAAAAABAAAAABAAMAAAAAABEAAAABAAMAAAAAABIAAAABAAMAAAAAABMAAAABAAMAAAAAABQAAAABAAMAAAAAABUAAAABAAMAAAD//wAAAAAEAAAAAAD//wEAAAAEAAQAAAD//wIAAAAEAAQAAAD//wMAAAAEAAQAAAD//wQAAAAEAAQAAAD//wUAAAAEAAQAAAD//wYAAAAEAAQAAAD//wcAAAAEAAQAAAD//wgAAAAEAAQAAAD//wkAAAAEAAQAAAD//woAAAAEAAQAAAD//wsAAAAEAAQAAAD//wwAAAAEAAQAAAD//w0AAAAEAAQAAAD//w4AAAAEAAQAAAD//w8AAAAEAAQAAAD//xAAAAAEAAQAAAD//xEAAAAEAAQAAAD//xIAAAAEAAQAAAD//xMAAAAEAAQAAAD//xQAAAAEAAQAAAD//xUAAAAEAAQAAAAAAAAAAAAGAAAAAAAAAAEAAAABAAMAAAA=")
tile_set = SubResource("TileSet_qatdj")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.705882, 1, 1, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(90, 120)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_vc1cl")
autoplay = "default"
speed_scale = 0.2

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(90, 120)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_5regu")
autoplay = "default"
speed_scale = 0.2

[node name="TextContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_top = 10.0
offset_right = -16.0
offset_bottom = 10.0
grow_horizontal = 0
script = ExtResource("5_i1mjr")
text_scene = ExtResource("5_45n48")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 194.0
offset_right = 46.0
offset_bottom = 214.0
theme = SubResource("Theme_26iyp")
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.388235, 0.388235, 0.388235, 1)
theme_override_colors/font_color = Color(0.388235, 0.388235, 0.388235, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_hjaa2")
theme_override_font_sizes/font_size = 12
text = "追问"

[connection signal="duihua_end" from="." to="." method="_on_duihua_end"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="pressed" from="Button" to="TextContainer" method="_on_button_pressed"]
